# Algorithms-and-Data-Structure

algo/: 111732.cpp  CMakeLists.txt  a.cpp  aho-korasik.cpp  b.cpp  bin_search.cpp  bst.cpp  c.cpp  d.cpp  e.cpp  hash.cpp  heap.cpp  heap2.cpp  linked_list.cpp  merge.cpp  quick_sort.cpp  secondmax.cpp  stack.cpp  stack2.cpp  stack_with_pointer.cpp  trie.cpp  ugly_numbers.cpp
endterm2021/: a.cpp  b.cpp  c.cpp  d.cpp  e.cpp  f.cpp
final2020/: CMakeLists.txt  a.cpp  b.cpp  c.cpp  d.cpp  g.cpp
midterm2020fall/: CMakeLists.txt  a.cpp  d.cpp  e.cpp
w1/: .gitignore
w1/lab_1/: a.cpp  b.cpp  c.cpp  d.cpp  e.cpp  e2.cpp  f.cpp  f2.cpp  g.cpp  h.cpp  i.cpp  j.cpp  k.cpp  l.cpp
w2/lab_2/: 21_leetcode.cpp  CMakeLists.txt  a.cpp  b.cpp  d.cpp  e.cpp
w3/lab 3/: 111728.cpp  1164.cpp  1427.cpp  1440.cpp  1447.cpp  1_heap.cpp  226.cpp  227.cpp  3.cpp  349_leetcode.cpp  35_leetcode.cpp  4.cpp  69_leetcode.cpp  CMakeLists.txt  a.cpp
w4/: 653_leetcode.cpp  938_leetcode.cpp  CMakeLists.txt  a.cpp  b.cpp  d.cpp  e.cpp  f.cpp  h.cpp  max.cpp
w5/lab 5/: CMakeLists.txt  a.cpp  b.cpp  c.cpp  d.cpp  e.cpp  g.cpp
w6/lab_6/: 187_leetcode.cpp  CMakeLists.txt  a1.cpp  a2.cpp  b.cpp  c1.cpp  c2.cpp  d.cpp
w8/lab_8/acmp/: 1.cpp  1043_acmp.cpp  1072_acmp.cpp  1201_acmp.cpp  1202_acmp.cpp  1203_acmp.cpp  1204_acmp.cpp  1205_acmp.cpp  124_acmp.cpp  125_acmp.cpp  126_acmp.cpp  127_acmp.cpp  128_acmp.cpp  129_acmp.cpp  1317_acmp.cpp  1356_acmp.cpp  1357_acmp.cpp  1358_acmp.cpp  1359_acmp.cpp  1360_acmp.cpp  141_acmp.cpp  1473_acmp.cpp  150_acmp.cpp  151_acmp.cpp  152_acmp.cpp  15_acmp.cpp  166.cpp  185_acmp.cpp  382_acmp.cpp  414_acmp.cpp  432_acmp.cpp  743_acmp.cpp  783_acmp.cpp  784_acmp.cpp  CMakeLists.txt  a.cpp  b.cpp  d.cpp  e.cpp  f.cpp  (+3 more)
w8/lab_8/informatics/: 111541.cpp  112823.cpp  160.cpp  161.cpp  164.cpp  166.cpp  182.cpp  183.cpp  3494.cpp  460.cpp  461.cpp  463.cpp  464.cpp  5_dijkstra.cpp  6_dijkstra.cpp  7_dijkstra.cpp  CMakeLists.txt  a.cpp  c.cpp  d.cpp  e.cpp  e2.cpp  f.cpp  kruskala.cpp
