cmake_minimum_required(VERSION 3.20)
project(algo)

set(CMAKE_CXX_STANDARD 14)

add_executable(bst.cpp bst.cpp)
add_executable(bin_search.cpp bin_search.cpp)
add_executable(heap.cpp heap.cpp)
add_executable(linked_list.cpp linked_list.cpp)
add_executable(stack.cpp stack.cpp)
add_executable(stack2.cpp stack2.cpp)
add_executable(stack_with_pointer.cpp stack_with_pointer.cpp)
add_executable(ugly_numbers.cpp ugly_numbers.cpp)
add_executable(secondmax.cpp secondmax.cpp)
add_executable(heap2.cpp heap2.cpp)
add_executable(quick_sort.cpp quick_sort.cpp)
add_executable(merge.cpp merge.cpp)
add_executable(a.cpp a.cpp)
add_executable(b.cpp b.cpp)
add_executable(c.cpp c.cpp)
add_executable(d.cpp d.cpp)
add_executable(e.cpp e.cpp)
add_executable(hash.cpp hash.cpp)
add_executable(wrek.cpp wrek.cpp)
add_executable(trie.cpp trie.cpp)
add_executable(111732.cpp 111732.cpp)
add_executable(aho-korasik.cpp aho-korasik.cpp)