cmake_minimum_required(VERSION 3.17)
project(main)

set(CMAKE_CXX_STANDARD 14)

add_executable("d.cpp" "d.cpp")
add_executable("b.cpp" "b.cpp")
add_executable("e.cpp" "e.cpp")
add_executable("f.cpp" "f.cpp")
add_executable("max.cpp" "max.cpp")
add_executable("a.cpp" "a.cpp")
add_executable("h.cpp" "h.cpp")
add_executable("heap.cpp" "heap.cpp")
add_executable("938_leetcode.cpp" "938_leetcode.cpp"  )
add_executable("653_leetcode.cpp" "653_leetcode.cpp"  )
add_executable("quicksort.cpp" "quicksort.cpp")