cmake_minimum_required(VERSION 3.17)
project(main)

set(CMAKE_CXX_STANDARD 14)

#add_executable("bin_search.cpp" "bin_search.cpp")
#add_executable("heap.cpp" "heap.cpp")
#add_executable("226.cpp" "226.cpp")
#add_executable("227.cpp" "227.cpp")
#add_executable("1427.cpp" "1427.cpp")
#add_executable("1440.cpp" "1440.cpp")
#add_executable("4.cpp" "4.cpp")
#add_executable("3.cpp" "3.cpp")
#add_executable("1447.cpp" "1447.cpp")
#add_executable(111728.cpp 111728.cpp)
#add_executable(1164.cpp 1164.cpp)
#add_executable(1_heap.cpp 1_heap.cpp)
#add_executable(35_leetcode.cpp 35_leetcode.cpp)
#add_executable(69_leetcode.cpp 69_leetcode.cpp)
#add_executable(349_leetcode.cpp 349_leetcode.cpp)
add_executable("a.cpp" "a.cpp")
