cmake_minimum_required(VERSION 3.20)
project(lab_6)

set(CMAKE_CXX_STANDARD 14)

add_executable(a1.cpp a1.cpp)
add_executable(a2.cpp a2.cpp)
add_executable(b.cpp b.cpp)
add_executable(c1.cpp c1.cpp)
add_executable(c2.cpp c2.cpp)
add_executable(d.cpp d.cpp)
add_executable(187_leetcode.cpp 187_leetcode.cpp)