cmake_minimum_required(VERSION 3.20)
project(acmp)

set(CMAKE_CXX_STANDARD 14)

add_executable(15_acmp.cpp 15_acmp.cpp)
add_executable(124_acmp.cpp 124_acmp.cpp)
add_executable(125_acmp.cpp 125_acmp.cpp)
add_executable(126_acmp.cpp 126_acmp.cpp)
add_executable(snake.cpp snake.cpp)
add_executable(snake2.cpp snake2.cpp)
add_executable(1201_acmp.cpp 1201_acmp.cpp)
add_executable(1072_acmp.cpp 1072_acmp.cpp)
add_executable(784_acmp.cpp 784_acmp.cpp)
add_executable(snake3.cpp snake3.cpp)
add_executable(1202_acmp.cpp 1202_acmp.cpp)
add_executable(1203_acmp.cpp 1203_acmp.cpp)
add_executable(1356_acmp.cpp 1356_acmp.cpp)
add_executable(1205_acmp.cpp 1205_acmp.cpp)
add_executable(1204_acmp.cpp 1204_acmp.cpp)
add_executable(1358_acmp.cpp 1358_acmp.cpp)
add_executable(1317_acmp.cpp 1317_acmp.cpp)
add_executable(1.cpp 1.cpp)
add_executable(150_acmp.cpp 150_acmp.cpp)
add_executable(185_acmp.cpp 185_acmp.cpp)
add_executable(1359_acmp.cpp 1359_acmp.cpp)
add_executable(1360_acmp.cpp 1360_acmp.cpp)
add_executable(1357_acmp.cpp 1357_acmp.cpp)
add_executable(141_acmp.cpp 141_acmp.cpp)
add_executable(151_acmp.cpp 151_acmp.cpp)
add_executable(127_acmp.cpp 127_acmp.cpp)
add_executable(414_acmp.cpp 414_acmp.cpp)
add_executable(783_acmp.cpp 783_acmp.cpp)
add_executable(1043_acmp.cpp 1043_acmp.cpp)
add_executable(152_acmp.cpp 152_acmp.cpp)
add_executable(382_acmp.cpp 382_acmp.cpp)
add_executable(128_acmp.cpp 128_acmp.cpp)
add_executable(1473_acmp.cpp 1473_acmp.cpp)
add_executable(129_acmp.cpp 129_acmp.cpp)
add_executable(432_acmp.cpp 432_acmp.cpp)
add_executable(743_acmp.cpp 743_acmp.cpp)
add_executable(166.cpp 166.cpp)
add_executable(a.cpp a.cpp)
add_executable(b.cpp b.cpp)
add_executable(c.cpp c.cpp)
add_executable(d.cpp d.cpp)
add_executable(e.cpp e.cpp)
add_executable(f.cpp f.cpp)