cmake_minimum_required(VERSION 3.20)
project(informatics)

set(CMAKE_CXX_STANDARD 14)

add_executable(460.cpp 460.cpp)
add_executable(461.cpp 461.cpp)
add_executable(463.cpp 463.cpp)
add_executable(464.cpp 464.cpp)
add_executable(160.cpp 160.cpp)
add_executable(161.cpp 161.cpp)
add_executable(164.cpp 164.cpp)
add_executable(111541.cpp 111541.cpp)
add_executable(5_dijkstra.cpp 5_dijkstra.cpp)
add_executable(6_dijkstra.cpp 6_dijkstra.cpp)
add_executable(7_dijkstra.cpp 7_dijkstra.cpp)
add_executable(112823.cpp 112823.cpp)
add_executable(kruskala.cpp kruskala.cpp)
add_executable(166.cpp 166.cpp)
add_executable(182.cpp 182.cpp)
add_executable(183.cpp 183.cpp)
add_executable(3494.cpp 3494.cpp)
add_executable(a.cpp a.cpp)
add_executable(b.cpp b.cpp)
add_executable(c.cpp c.cpp)
add_executable(d.cpp d.cpp)
add_executable(e.cpp e.cpp)
add_executable(f.cpp f.cpp)
add_executable(e2.cpp e2.cpp)